Fix z-index and genericize font in grid.less

--- a/css/dev-grid.less
+++ b/css/dev-grid.less
@@ -8,9 +8,9 @@
 #dev_grid-toggle {
 	color: white;
 	position: fixed;
-	font-face: "M+ 1p";
+	font-face: 'Helvetica Neue', Helvetica, Arial, sans-serif;
 	font-size: 0.8em;
-	z-index: 5;
+	z-index: 5001;
 	bottom: 0;
 	right: 0;
 	cursor: pointer;
